# bip324-traffic-analysis

./: .gitignore  ARCHITECTURE.md  README.md  analyze_mainnet.ipynb  analyze_warnet.ipynb  pyproject.toml  requirements.txt  run_analysis.py
p2p324_analysis/: __init__.py  build_flows.py  cli.py  detect_passive.py  models.py  pipeline.py  read_bitcoin_logs.py  read_ip_map.py  read_pcap.py  validate_predictions.py  write_reports.py
